--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/fontawesome/css/font-awesome.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -20,23 +21,9 @@
     <div class="header">
         <div class="navbar navbar-default" role="navigation">
             <div class="container">
-                <div class="navbar-header">
-
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                            data-target="#js-navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-
-                    <a class="navbar-brand" href="#/">moviesNg</a>
-                </div>
-
                 <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#/">Home</a></li>
+                        <li class="active"><a href="#/">Movies</a></li>
                     </ul>
                 </div>
             </div>
@@ -49,7 +36,7 @@
 
     <div class="footer">
         <div class="container">
-            <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+            <p><i class="fa fa-lg fa-play-circle"></i> Movies 2015</p>
         </div>
     </div>
 
@@ -65,6 +52,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/lodash/lodash.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -72,7 +60,7 @@
     <!-- include: "type": "js", "basePath": "app", "baseUrl": "/", "files": "scripts/**/*.js" -->
     <script src="/scripts/app.js"></script>
     <script src="/scripts/config.js"></script>
-    <script src="/scripts/controllers/main.js"></script>
+    <script src="/scripts/controllers/movies/list.js"></script>
     <script src="/scripts/services/interceptors/proxy.js"></script>
     <script src="/scripts/services/interceptors/trakt.js"></script>
     <script src="/scripts/services/repositories/movies.js"></script>
