--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
     </div>
 
     <div class="container">
+        <spinner></spinner>
         <div ui-view=""></div>
     </div>
 
@@ -62,6 +63,7 @@
     <script src="/scripts/app.js"></script>
     <script src="/scripts/config.js"></script>
     <script src="/scripts/controllers/movies/list.js"></script>
+    <script src="/scripts/directives/spinner.js"></script>
     <script src="/scripts/services/interceptors/proxy.js"></script>
     <script src="/scripts/services/interceptors/trakt.js"></script>
     <script src="/scripts/services/repositories/movies.js"></script>
