--- a/app/index.html
+++ b/app/index.html
@@ -9,12 +9,14 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/fontawesome/css/font-awesome.css" />
+    <link rel="stylesheet" href="bower_components/videojs/dist/video-js/video-js.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <!-- include: "type": "css", "basePath": ".tmp", "baseUrl": "/", "files": "styles/**/*.css" -->
     <link href="/styles/main.css" rel="stylesheet" type="text/css">
     <!-- /include -->
+    <link href="bower_components/flat-ui/dist/css/flat-ui.css" rel="stylesheet" type="text/css" />
     <!-- endbuild -->
 </head>
 <body ng-app="app">
@@ -56,6 +58,8 @@
     <script src="bower_components/lodash/lodash.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
+    <script src="bower_components/videojs/dist/video-js/video.js"></script>
+    <script src="bower_components/flat-ui/dist/js/flat-ui.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
