--- a/app/index.html
+++ b/app/index.html
@@ -21,11 +21,12 @@
 </head>
 <body ng-app="app">
     <div class="header">
-        <div class="navbar navbar-default" role="navigation">
+        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="collapse navbar-collapse" id="js-navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#/">Movies</a></li>
+                        <li class="active"><a ui-sref="movies({page: 1, category: 'trending'})">Trending</a></li>
+                        <li><a ui-sref="movies({page: 1, category: 'popular'})">Popular</a></li>
                     </ul>
                 </div>
             </div>
