--- a/app/index.html
+++ b/app/index.html
@@ -33,8 +33,7 @@
         </div>
     </div>
 
-    <div class="container">
-        <spinner></spinner>
+    <div class="container" id="main_container">
         <div ui-view=""></div>
     </div>
 
