--- a/app/index.html
+++ b/app/index.html
@@ -5,19 +5,13 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/fontawesome/css/font-awesome.css" />
     <link rel="stylesheet" href="bower_components/videojs/dist/video-js/video-js.css" />
     <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
-    <!-- include: "type": "css", "basePath": ".tmp", "baseUrl": "/", "files": "styles/**/*.css" -->
-    <link href="/styles/main.css" rel="stylesheet" type="text/css">
-    <!-- /include -->
+    <link href="/styles/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="bower_components/flat-ui/dist/css/flat-ui.css" rel="stylesheet" type="text/css" />
-    <!-- endbuild -->
+    <link href="/styles/main.css" rel="stylesheet" type="text/css">
 </head>
 <body ng-app="app">
     <div class="header">
