--- a/app/index.html
+++ b/app/index.html
@@ -18,9 +18,9 @@
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="collapse navbar-collapse" id="js-navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a ui-sref="movies({page: 1, category: 'trending'})">Trending</a></li>
-                        <li><a ui-sref="movies({page: 1, category: 'popular'})">Popular</a></li>
+                    <ul class="nav navbar-nav" nav-menu>
+                        <li class="active"><a ui-sref="movies({category: 'trending'})">Trending</a></li>
+                        <li><a ui-sref="movies({category: 'popular'})">Popular</a></li>
                     </ul>
                 </div>
             </div>
@@ -62,6 +62,7 @@
     <script src="/scripts/app.js"></script>
     <script src="/scripts/config.js"></script>
     <script src="/scripts/controllers/movies/list.js"></script>
+    <script src="/scripts/directives/nav_menu.js"></script>
     <script src="/scripts/directives/spinner.js"></script>
     <script src="/scripts/services/interceptors/proxy.js"></script>
     <script src="/scripts/services/interceptors/trakt.js"></script>
