--- a/app/index.html
+++ b/app/index.html
@@ -10,79 +10,83 @@
     <link rel="stylesheet" href="bower_components/fontawesome/css/font-awesome.css" />
     <link rel="stylesheet" href="bower_components/videojs/dist/video-js/video-js.css" />
     <!-- endbower -->
-    <link href="/styles/bootstrap.css" rel="stylesheet" type="text/css" />
-    <link href="bower_components/flat-ui/dist/css/flat-ui.css" rel="stylesheet" type="text/css" />
+    <link href="/styles/bootstrap.css" rel="stylesheet" type="text/css"/>
+    <link href="bower_components/flat-ui/dist/css/flat-ui.css" rel="stylesheet" type="text/css"/>
     <link href="/styles/main.css" rel="stylesheet" type="text/css">
 </head>
 <body ng-app="app">
-    <div class="header">
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="collapse navbar-collapse" id="js-navbar-collapse">
-                    <ul class="nav navbar-nav" nav-menu>
-                        <li class="active"><a ui-sref="movies({category: 'trending'})">Trending</a></li>
-                        <li><a ui-sref="movies({category: 'popular'})">Popular</a></li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <oauth
-                                    site="https://trakt.tv"
-                                    client-id="46850385b8b30f9c03d3f9ee4d7af98825d08a868039d4cd495b757225dd3d08"
-                                    redirect-uri="http://localhost:9000"
-                                    scope="public"
-                                    template="views/templates/login.html">
-                            </oauth>
-                            <!--<a href="#"><i class="fa fa-arrow-right"></i>&nbsp;Sign In</a>-->
-                        </li>
-                    </ul>
-                </div>
+<div class="header">
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="collapse navbar-collapse" id="js-navbar-collapse">
+                <ul class="nav navbar-nav" nav-menu>
+                    <li class="active"><a ui-sref="movies({category: 'trending'})">Trending</a></li>
+                    <li><a ui-sref="movies({category: 'popular'})">Popular</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <oauth
+                                site="https://trakt.tv"
+                                client-id="46850385b8b30f9c03d3f9ee4d7af98825d08a868039d4cd495b757225dd3d08"
+                                redirect-uri="http://localhost:9000"
+                                scope="public"
+                                template="views/templates/login.html">
+                        </oauth>
+                        <!--<a href="#"><i class="fa fa-arrow-right"></i>&nbsp;Sign In</a>-->
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
+</div>
 
-    <div class="container" id="main_container">
-        <div ui-view=""></div>
+<div class="container" id="main_container">
+    <div ui-view=""></div>
+</div>
+
+<div class="footer">
+    <div class="container">
+        <p><i class="fa fa-lg fa-play-circle"></i> Movies 2015</p>
     </div>
+</div>
 
-    <div class="footer">
-        <div class="container">
-            <p><i class="fa fa-lg fa-play-circle"></i> Movies 2015</p>
-        </div>
-    </div>
+<!-- build:js(.) scripts/vendor.js -->
+<!-- bower:js -->
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
+<script src="bower_components/angular-animate/angular-animate.js"></script>
+<script src="bower_components/angular-cookies/angular-cookies.js"></script>
+<script src="bower_components/angular-messages/angular-messages.js"></script>
+<script src="bower_components/angular-resource/angular-resource.js"></script>
+<script src="bower_components/angular-route/angular-route.js"></script>
+<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+<script src="bower_components/angular-touch/angular-touch.js"></script>
+<script src="bower_components/lodash/lodash.js"></script>
+<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+<script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
+<script src="bower_components/videojs/dist/video-js/video.js"></script>
+<script src="bower_components/flat-ui/dist/js/flat-ui.js"></script>
+<script src="bower_components/angular-cookie/angular-cookie.js"></script>
+<script src="bower_components/query-string/query-string.js"></script>
+<script src="bower_components/angular-oauth2/dist/angular-oauth2.js"></script>
+<!-- endbower -->
+<!-- endbuild -->
 
-    <!-- build:js(.) scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
-    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-    <script src="bower_components/angular-messages/angular-messages.js"></script>
-    <script src="bower_components/angular-resource/angular-resource.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="bower_components/angular-touch/angular-touch.js"></script>
-    <script src="bower_components/lodash/lodash.js"></script>
-    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-    <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
-    <script src="bower_components/videojs/dist/video-js/video.js"></script>
-    <script src="bower_components/flat-ui/dist/js/flat-ui.js"></script>
-    <script src="bower_components/ngstorage/ngStorage.js"></script>
-    <script src="bower_components/oauth-ng/dist/oauth-ng.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
-
-    <!-- build:js({.tmp,app}) scripts/scripts.js -->
-    <!-- include: "type": "js", "basePath": "app", "baseUrl": "/", "files": "scripts/**/*.js" -->
-    <script src="/scripts/app.js"></script>
-    <script src="/scripts/config.js"></script>
-    <script src="/scripts/controllers/movies/list.js"></script>
-    <script src="/scripts/directives/nav_menu.js"></script>
-    <script src="/scripts/directives/spinner.js"></script>
-    <script src="/scripts/services/interceptors/proxy.js"></script>
-    <script src="/scripts/services/interceptors/trakt.js"></script>
-    <script src="/scripts/services/repositories/movies.js"></script>
-    <!-- /include -->
-    <!-- endbuild -->
+<!-- build:js({.tmp,app}) scripts/scripts.js -->
+<!-- include: "type": "js", "basePath": "app", "baseUrl": "/", "files": "scripts/**/*.js" -->
+<script src="/scripts/app.js"></script>
+<script src="/scripts/config.js"></script>
+<script src="/scripts/config/interceptors.js"></script>
+<script src="/scripts/config/oauth.js"></script>
+<script src="/scripts/config/states.js"></script>
+<script src="/scripts/controllers/movies/list.js"></script>
+<script src="/scripts/directives/nav_menu.js"></script>
+<script src="/scripts/directives/spinner.js"></script>
+<script src="/scripts/services/interceptors/proxy.js"></script>
+<script src="/scripts/services/interceptors/trakt.js"></script>
+<script src="/scripts/services/repositories/movies.js"></script>
+<!-- /include -->
+<!-- endbuild -->
 </body>
 </html>
