--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
         <div class="container">
             <div class="collapse navbar-collapse" id="js-navbar-collapse">
                 <ul class="nav navbar-nav" nav-menu>
-                    <li class="active"><a ui-sref="movies({category: 'trending'})">Trending</a></li>
-                    <li><a ui-sref="movies({category: 'popular'})">Popular</a></li>
+                    <li ui-sref-active="active"><a ui-sref="movies({category: 'trending'})">Trending</a></li>
+                    <li ui-sref-active="active"><a ui-sref="movies({category: 'popular'})">Popular</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
