skonczone logowanie oauth

--- a/src/index.html
+++ b/src/index.html
@@ -25,18 +25,7 @@
                     <li ui-sref-active="active"><a ui-sref="movies_trending">Trending</a></li>
                     <li ui-sref-active="active"><a ui-sref="movies_popular">Popular</a></li>
                 </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <!--<oauth-->
-                                <!--site="https://trakt.tv"-->
-                                <!--client-id="46850385b8b30f9c03d3f9ee4d7af98825d08a868039d4cd495b757225dd3d08"-->
-                                <!--redirect-uri="http://localhost:9000"-->
-                                <!--scope="public"-->
-                                <!--template="views/templates/login.html">-->
-                        <!--</oauth>-->
-                        <!--<a href="#"><i class="fa fa-arrow-right"></i>&nbsp;Sign In</a>-->
-                    </li>
-                </ul>
+                <login-menu></login-menu>
             </div>
         </div>
     </div>
