dodana kategoria anticipated

--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
                 <ul class="nav navbar-nav" nav-menu>
                     <li ui-sref-active="active"><a ui-sref="movies_trending">Trending</a></li>
                     <li ui-sref-active="active"><a ui-sref="movies_popular">Popular</a></li>
+                    <li ui-sref-active="active"><a ui-sref="movies_anticipated">Anticipated</a></li>
                 </ul>
                 <login-menu></login-menu>
             </div>
