--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
     </div>
 </div>
 
+<script src="https://www.youtube.com/iframe_api"></script>
 <!-- build:js(src) scripts/vendor.js -->
 <!-- bower:js -->
 <!-- endbower -->
